0.11.3 - 15/01/2021

Fixed
    An error with operations socket in snap install

0.11.2 - 14/01/2021

Fixed
    Trying to access undefined property of analytics data when theres no info
    Incorrect calculation for total storage usage
    SNAP not building because of new sqlite3 release

0.11.1 - 13/01/2021

Changed
    Image shown as part of instance details instead of title
    Allow setting memory limit when creating a VM (#330)
    Support subscribing to different project operations socket (#332)

Fixed
    Storage progress bar calculation is incorrect (#333)
    An error gathering fleet storage usasge data
     memory stats are used in the storage part of the widget (#332)

0.11.0 - 29/12/2020 (Happy 2 year birthday LXDMosaic)

Added
    Cron job to disable backup schedules for offline hosts & deleted instances
    Limit not-admin users to servers/projects
    View to view & delete hosts in settings
    Show instance limits on instance view (#288)
    Get & set comments in the user.comment key for an instance (#283)
    Show project consumption on project overview
    Filter by name & instance type in sidebar on hosts with more than 5 instances
    Show OS icon in sidebar (#296)
    Button to start an instance on creation (#294)
    LDAP user syncing & login (#171, #272, #300)
    Show users who can access a project on project view
    View storage volumes
    Attach volumes to instances
    View VGA console for virtual machines (#238)

Changed
    Support backups & backup schedules in different projects
    Disable backup schedules when deleting instance
    Use buttons for bulk instance actions instead of dropdown
    Dont show carat when host is offline
    Replace nav button text with icons
    Go back to default font
    Split project restrictions into their own table on frontend
    Remove all usage of cdns (so the it should work offline) (#293)
    Allow setting admin password on first run (#299)
    Show operation download progress if available (#316)