@@ -1,3 +1,8 @@
+Unreleased
+
+Fixed
+    Host being shown as null in operation list when alias not set (#325)
+
 0.11.3 - 15/01/2021
 
 Fixed
